// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Metadata;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using NeuralChickens.Api.Domain;

#nullable disable

namespace NeuralChickens.Api.Domain.Migrations
{
    [DbContext(typeof(NeuralChickensDbContext))]
    [Migration("20260921022746_AddChickenBrain")]
    partial class AddChickenBrain
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.11")
                .HasAnnotation("Relational:MaxIdentifierLength", 128);

            SqlServerModelBuilderExtensions.UseIdentityColumns(modelBuilder);

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.Chicken", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("Wins")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.ToTable("Chickens");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.ChickenBrain", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<string>("BrainPath")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<int>("ChickenId")
                        .HasColumnType("int");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("SimulationType")
                        .HasColumnType("int");

                    b.HasKey("Id");

                    b.HasIndex("ChickenId", "SimulationType", "CreatedAt");

                    b.ToTable("ChickenBrains");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.FindSimulationConfiguration", b =>
                {
                    b.Property<int>("SimulationId")
                        .HasColumnType("int");

                    b.Property<float>("Speed")
                        .HasColumnType("real");

                    b.HasKey("SimulationId");

                    b.ToTable("FindSimulationConfigurations");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.FindSimulationResult", b =>
                {
                    b.Property<int>("SimulationId")
                        .HasColumnType("int");

                    b.Property<int>("Wins")
                        .HasColumnType("int");

                    b.HasKey("SimulationId");

                    b.ToTable("FindSimulationResults");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.RaceSimulationConfiguration", b =>
                {
                    b.Property<int>("SimulationId")
                        .HasColumnType("int");

                    b.HasKey("SimulationId");

                    b.ToTable("RaceSimulationConfigurations");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.RaceSimulationResult", b =>
                {
                    b.Property<int>("SimulationId")
                        .HasColumnType("int");

                    b.Property<int?>("WinnerChickenId")
                        .HasColumnType("int");

                    b.HasKey("SimulationId");

                    b.ToTable("RaceSimulationResults");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.Simulation", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("int");

                    SqlServerPropertyBuilderExtensions.UseIdentityColumn(b.Property<int>("Id"));

                    b.Property<DateTime?>("CompletedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("Contestants")
                        .HasColumnType("int");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.Property<DateTime>("RequestedAt")
                        .HasColumnType("datetime2");

                    b.Property<int>("SimulationStatus")
                        .HasColumnType("int");

                    b.Property<int>("SimulationType")
                        .HasColumnType("int");

                    b.Property<DateTime?>("StartedAt")
                        .HasColumnType("datetime2");

                    b.Property<string>("VideoPath")
                        .IsRequired()
                        .HasColumnType("nvarchar(max)");

                    b.HasKey("Id");

                    b.ToTable("Simulations");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.SimulationChicken", b =>
                {
                    b.Property<int>("SimulationId")
                        .HasColumnType("int");

                    b.Property<int>("ChickenId")
                        .HasColumnType("int");

                    b.HasKey("SimulationId", "ChickenId");

                    b.HasIndex("ChickenId");

                    b.ToTable("SimulationChickens");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.ChickenBrain", b =>
                {
                    b.HasOne("NeuralChickens.Api.Domain.Entities.Chicken", "Chicken")
                        .WithMany("ChickenBrains")
                        .HasForeignKey("ChickenId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Chicken");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.FindSimulationConfiguration", b =>
                {
                    b.HasOne("NeuralChickens.Api.Domain.Entities.Simulation", "Simulation")
                        .WithOne()
                        .HasForeignKey("NeuralChickens.Api.Domain.Entities.FindSimulationConfiguration", "SimulationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Simulation");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.FindSimulationResult", b =>
                {
                    b.HasOne("NeuralChickens.Api.Domain.Entities.Simulation", "Simulation")
                        .WithOne()
                        .HasForeignKey("NeuralChickens.Api.Domain.Entities.FindSimulationResult", "SimulationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Simulation");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.RaceSimulationConfiguration", b =>
                {
                    b.HasOne("NeuralChickens.Api.Domain.Entities.Simulation", "Simulation")
                        .WithOne()
                        .HasForeignKey("NeuralChickens.Api.Domain.Entities.RaceSimulationConfiguration", "SimulationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Simulation");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.RaceSimulationResult", b =>
                {
                    b.HasOne("NeuralChickens.Api.Domain.Entities.Simulation", "Simulation")
                        .WithOne()
                        .HasForeignKey("NeuralChickens.Api.Domain.Entities.RaceSimulationResult", "SimulationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Simulation");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.SimulationChicken", b =>
                {
                    b.HasOne("NeuralChickens.Api.Domain.Entities.Chicken", "Chicken")
                        .WithMany()
                        .HasForeignKey("ChickenId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("NeuralChickens.Api.Domain.Entities.Simulation", "Simulation")
                        .WithMany("SimulationChickens")
                        .HasForeignKey("SimulationId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Chicken");

                    b.Navigation("Simulation");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.Chicken", b =>
                {
                    b.Navigation("ChickenBrains");
                });

            modelBuilder.Entity("NeuralChickens.Api.Domain.Entities.Simulation", b =>
                {
                    b.Navigation("SimulationChickens");
                });
#pragma warning restore 612, 618
        }
    }
}
