Table Simulations {
  Id int [pk, increment]
  Name nvarchar [not null]
  SimulationType int [not null, note: 'Find=0, Race=1, Sumo=2, Balance=3']
  SimulationStatus int [not null, note: 'Requested=0, Training=1, Trained=2, Failed=3, Cancelled=4']
  Contestants int [not null]
  RequestedAt datetime [not null]
  StartedAt datetime
  CompletedAt datetime
  VideoPath nvarchar [not null]
}

Table Chickens {
  Id int [pk, increment]
  Name nvarchar [not null]
  Wins int [not null]
}

Table ChickenBrain {
  Id int [pk, increment]
  SimulationType int [not null, note: 'Find=0, Race=1, Sumo=2, Balance=3']
  BrainPath nvarchar [not null]
  CreatedAt datetime [not null]
  ChickenId int [not null]

  indexes {
    (ChickenId, SimulationType, CreatedAt)
  }
}

Table SimulationChickens {
  SimulationId int [not null]
  ChickenId int [not null]

  indexes {
    (SimulationId, ChickenId) [pk]
    ChickenId
  }
}

Table FindSimulationConfigurations {
  SimulationId int [pk]
  Speed float [not null]
}

Table FindSimulationResults {
  SimulationId int [pk]
  Wins int [not null]
}

Table RaceSimulationConfigurations {
  SimulationId int [pk]
}

Table RaceSimulationResults {
  SimulationId int [pk]
  WinnerChickenId int
}

Ref: ChickenBrain.ChickenId > Chickens.Id [delete: cascade]

Ref: SimulationChickens.SimulationId > Simulations.Id [delete: cascade]
Ref: SimulationChickens.ChickenId > Chickens.Id [delete: restrict]

Ref: FindSimulationConfigurations.SimulationId - Simulations.Id [delete: cascade]
Ref: FindSimulationResults.SimulationId - Simulations.Id [delete: cascade]
Ref: RaceSimulationConfigurations.SimulationId - Simulations.Id [delete: cascade]
Ref: RaceSimulationResults.SimulationId - Simulations.Id [delete: cascade]
